--- a/eww.scss
+++ b/eww.scss
@@ -10,7 +10,23 @@ $surface-red: #f87070;
   font-family: Phosphor, Koulen;
   background-repeat: no-repeat;
   background-size: contain;
-  padding: 5em;
+}
+
+.btn_box {
+  padding: 4em;
+}
+
+.power-btn {
+  font-size: 2em;
+  padding: 0.8em;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 0.1em;
+  &:hover {
+    color: $surface-red;
+  }
+  background-color: rgba($surface-darkgrey, 1.0);
+
 }
 
 .close-btn {
