--- a/eww.scss
+++ b/eww.scss
@@ -16,6 +16,10 @@ $surface-red: #f87070;
   padding: 4em;
 }
 
+.widget_box {
+  padding: 4em;
+}
+
 .power-btn {
   font-size: 2em;
   padding: 0.8em;
@@ -31,9 +35,30 @@ $surface-red: #f87070;
 
 .close-btn {
   font-size: 2em;
+  padding: 0.8em;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 0.1em;
   &:hover {
     color: $surface-red;
   }
-  background-color: rgba($surface-darkgrey, 1.0);
+}
 
+.sep {
+  font-size: 2em;
+  color: $surface-lightgrey;
+}
+
+.sundial-lbl {
+  font-size: 1.5em;
+  padding: 0.8em;
+}
+
+.bat-box {
+  padding: 0.8em;
+  font-size: 2em;
+}
+.net-box {
+  padding: 0.8em;
+  font-size: 2em;
 }
