--- a/eww.scss
+++ b/eww.scss
@@ -20,6 +20,19 @@ $surface-red: #f87070;
   padding: 4em;
 }
 
+.time-box {
+  font-size: 2em;
+  margin: 4em;
+}
+
+.hour-box {
+  font-size: 4em;
+}
+
+.minute-box {
+  font-size: 2.5em;
+}
+
 .power-btn {
   font-size: 2em;
   padding: 0.8em;
