update calendar widget and clock module

--- a/eww.scss
+++ b/eww.scss
@@ -142,3 +142,9 @@ $surface-red: #f87070;
 
 }
 
+.clock_date_class {
+    font-size: 0.8em;
+    margin: 0px 20px 0px 1px;
+    color: #d7beda;
+}
+
