--- a/eww.scss
+++ b/eww.scss
@@ -77,7 +77,7 @@ $surface-red: #f87070;
 }
 
 .bar_layout {
-  font-family: HackNerdFontMono;
+  font-family: JetBrainsMono Nerd Font;
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -95,7 +95,7 @@ $surface-red: #f87070;
 .right_tray {
 
   font-size: 1em;
-  font-family: HackNerdFontMono;
+  font-family: JetBrainsMono Nerd Font;
 }
 
 .idle_inhibitor_button {
@@ -148,3 +148,58 @@ $surface-red: #f87070;
     color: #d7beda;
 }
 
+.cal {
+  border-radius: 0.4em;
+  background-color: #0f0f17;
+  font-family: JetBrainsMono Nerd Font;
+  font-size: 1.0em;
+  font-weight: normal;
+
+.cal-in {
+    padding: 0px 10px 0px 10px;
+    color: #bfc9db;
+
+.cal {
+     &.highlight {
+          padding: 20px;
+      }
+
+      padding: 5px 5px 5px 5px;
+      margin-left: 10px;
+    }
+  }
+}
+
+.volbar trough highlight {
+  // background-image: linear-gradient(to right, #afcee0 30%, #a1bdce 50%, #77a5bf 100% *50);
+  border-radius: 10px;
+  background-color: $surface-red;
+}
+
+.volume_icon {
+    font-size: 1.2em;
+    color: #a1bdce;
+  margin: 0px 10px 0px 10px;
+}
+
+scale trough {
+  all: unset;
+  background-color: #22242b;
+  box-shadow: 0 2px 3px 2px #06060b;
+  border-radius: 0.5em;
+  min-height: 8px;
+  min-width: 70px;
+  margin: 0px 10px 0px 0px;
+}
+
+/** tooltip!! **/
+tooltip.background {
+    background-color: #0f0f17;
+    font-size: 1em;
+    border-radius: 10px;
+    color: #bfc9db;
+}
+
+tooltip label {
+    margin: 0.2em;
+}
