update separator used in status bar

--- a/eww.scss
+++ b/eww.scss
@@ -63,6 +63,11 @@ $surface-black: #040409;
   color: $surface-lightgrey;
 }
 
+.bar_sep {
+  font-size: 1em;
+  color: $surface-lightgrey;
+}
+
 .sundial-lbl {
   font-size: 1.5em;
   padding: 0.8em;
