added wifi module

--- a/eww.scss
+++ b/eww.scss
@@ -210,6 +210,19 @@ $surface-black: #040409;
   margin: 0px 5px 0px 10px;
 }
 
+.module-wifi {
+    font-size: 1.2em;
+    color: #a1bdce;
+    border-radius: 100%;
+  margin: 0px 12px 0px 5px;
+}
+
+.module_essid {
+    font-size: 1em;
+    color: #a1bdce;
+  margin: 0px 12px 0px 3px;
+}
+
 .batbar {
   color: #afbea2;
     background-color: #38384d;
